# arxiv-noteflow

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  example.env  pyproject.toml
.codex/skills/read-daily-arxiv/: SKILL.md
.codex/skills/read-daily-arxiv/agents/: openai.yaml
.codex/skills/read-daily-arxiv/references/: paper-note-spec.md
.codex/skills/read-daily-arxiv/scripts/: prepare_daily_batch.py  sync_lark_notes.py
docs/superpowers/plans/: 2026-05-16-daily-arxiv-cli-implementation.md
docs/superpowers/specs/: 2026-05-16-daily-arxiv-cli-design.md
scripts/: send_focus_summary_to_feishu.py
src/daily_arxiv/: arxiv_recent.py  cli.py  downloader.py  extractor.py  models.py
tests/: test_arxiv_recent.py  test_cli.py  test_downloader.py  test_extractor.py  test_project_metadata.py  test_send_focus_summary_to_feishu.py  test_sync_lark_notes.py
tests/fixtures/: cs_ro_recent.html
